# eh

./: .gitignore  Cargo.toml  README.md  flake.nix
.forgejo/workflows/: rust.yaml
crates/eh-config/: Cargo.toml
crates/eh-config/src/: lib.rs
crates/eh-error/: Cargo.toml
crates/eh-error/src/: lib.rs
crates/eh-locate/: Cargo.toml
crates/eh-locate/src/: lib.rs
crates/eh-log/: Cargo.toml
crates/eh-log/src/: lib.rs
crates/nix-command/: Cargo.toml
crates/nix-command/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
eh/: Cargo.toml
eh/src/: build.rs  command.rs  config.rs  error.rs  eval.rs  hash.rs  lib.rs  main.rs  nix_config.rs  retry.rs  run.rs  shell.rs  suggestions.rs  update.rs  util.rs
eh/src/commands/: comma.rs  info.rs  mod.rs  update.rs
eh/tests/: basic.rs
nix/: package.nix  shell.nix
nix/modules/: nixos.nix
xtask/: Cargo.toml
xtask/src/: main.rs
