[package]
name                   = "eh"
description.workspace  = true
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[lib]
crate-type = [ "lib" ]
name       = "eh"

[dependencies]
clap.workspace               = true
regex.workspace              = true
tempfile.workspace           = true
thiserror.workspace          = true
tracing.workspace            = true
tracing-subscriber.workspace = true
walkdir.workspace            = true
yansi.workspace              = true
