[package]
name                   = "eh"
description.workspace  = true
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[lib]
crate-type = [ "lib" ]
name       = "eh"

[dependencies]
clap.workspace          = true
clap_complete.workspace = true
dialoguer.workspace     = true
eh-config.workspace     = true
eh-error.workspace      = true
eh-locate.workspace     = true
eh-log.workspace        = true
nix-command.workspace   = true
regex.workspace         = true
serde.workspace         = true
serde_json.workspace    = true
tempfile.workspace      = true
textwrap.workspace      = true
walkdir.workspace       = true
yansi.workspace         = true
