[package]
name                   = "eh-error"
description            = "internal crate for eh errors"
version                = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
publish                = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true

[dependencies]
thiserror.workspace     = true
nix-index.workspace     = true
nix-command.workspace   = true
regex.workspace         = true
