[package]
name                   = "eh-locate"
description            = "crate to query nix-index and find packages from a binary"
version                = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
publish                = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true

[dependencies]
dialoguer.workspace     = true
regex.workspace         = true
nix-index.workspace     = true
eh-error.workspace      = true
dirs.workspace          = true
