[package]
name                   = "nix-command"
description            = "Typed Nix command construction and execution"
version                = "0.2.1"
edition.workspace      = true
rust-version.workspace = true
publish                = true
license.workspace      = true

[dependencies]
thiserror.workspace = true
