[package]
name                   = "nix-command"
description            = "Typed Nix command construction and execution"
version                = "0.2.2"
edition.workspace      = true
rust-version.workspace = true
publish                = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true

[dependencies]
subprocess.workspace = true
thiserror.workspace  = true
